--- a/hamiltonKhaki/hamilton.css
+++ b/hamiltonKhaki/hamilton.css
@@ -25,4 +25,8 @@ transform-origin 을 이용해 회전의 중심점을 잡아준다.
     animation: secondHand 60s steps(480) infinite  ;
 }
 
+path {
+    box-shadow: rgba(0, 0, 0, 0.05) 0px 1px 2px 0px;
+}
+
 /* animation 프로퍼티의 벨류 중 linear 과 steps 는 같이 양립할 수 없는 밸류. 일정한 속도로 진행과 끊어지면서 진행이니까.. */
